no longer displaying the footer logo on the find-a-job page
the logo doesn't fit the small space

--- a/web/app/themes/ppj/src/sass/components/footer.sass
+++ b/web/app/themes/ppj/src/sass/components/footer.sass
@@ -112,3 +112,6 @@
 
       &__nav-link:first-child > *
         border-left: none
+
+      &__logo
+        display: none
